--- a/style/style.css
+++ b/style/style.css
@@ -47,6 +47,31 @@ body{
     background: var(--sidebar-color);
 }
 
+.sidebar li{
+    height: 50px;
+    margin-top: 10px;
+    list-style: none;
+    display: flex;
+    align-items: center;
+}
+
+.sidebar li .icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 60px;
+    font-size: 20px;   
+}
+
+.sidebar li .icon, .sidebar li .text{
+    color: var(--text-color);
+}
+
+
+.sidebar  header{
+    position: relative;
+}
+
 .sidebar .image-text img{
     width: 40px;
     border-radius: 6px;
@@ -68,5 +93,48 @@ header .image-text .header-text{
 
 .header-text .profession{
     margin-top: -2px;
+}
+
+.sidebar  header .toggle{
+    position: absolute;
+    top: 50%;
+    right: -25px;
+    transform: translateY(-50%);
+    height: 25px;
+    width: 25px;
+    background: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    color: var(--sidebar-color);
+    font-size: 22px;
+}
+
+.sidebar .search-box{
+    background: var(--primary-color-light);
+}
+
+.search-box input{
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    border-radius: 6px;
+    background: var(--primary-color-light);
+}
+
+.sidebar li a{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    border-radius: 6px;
+    transition: var(--tran-04);
+}
+
+.sidebar li a:hover{
+    background: var(--primary-color);
 
 }
